# MCP-basic

./: README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
